# deep-recommender-models

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: matrix_factorization.example.yaml
deepfm/: README.md  config.yaml  main.py  model.py
din/: README.md  config.yaml  main.py  model.py
homepage_lightgbm/: .gitignore  README.md  config.yaml  main.py  model.py  requirements.txt
homepage_recommendation/: .gitignore  README.md  config.yaml  main.py  model.py  requirements-gpu.txt  requirements.txt
homepage_recommendation/scripts/: dump_bigquery_data.py  train_gpu.sh
scripts/: train.py
src/deep_recommender_models/: __init__.py  typing.py
src/deep_recommender_models/models/: __init__.py  base.py  matrix_factorization.py  wide_and_deep.py
tests/: test_models.py
two_tower_recall/: README.md  config.yaml  main.py  model.py
